fix(app.component.ts): import ApiService to fix missing import statement feat(app.component.ts): add dictionaryResult property to store dictionary results and subscribe to dictionaryResults$ observable fix(definition-card.component.ts): change subtitle class names to more descriptive names fix(definition-card.component.ts): add conditional rendering for example paragraph fix(definition-card.component.ts): add styles for definition card component fix(shared.service.ts): rename wordResults to dictionaryResults for consistency feat(shared.service.ts): add setDictionaryResults method to update dictionaryResultsSubject fix(base.scss): change overflow property to only hide horizontal overflow

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -14,9 +14,10 @@ body {
   font-weight: 400;
 
   // display: flex;
-  height: 100vh;
+  // height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
+
 }
 
 .container {
